fix(Tabs): remove flickering of TabTitle on first render

--- a/packages/components/src/components/Tabs/components/TabTitle/TabTitle.module.scss
+++ b/packages/components/src/components/Tabs/components/TabTitle/TabTitle.module.scss
@@ -18,4 +18,23 @@
     color: var(--tab--color--selected);
     font-weight: var(--tab--font-weight--selected);
   }
+// selected tab
+.tabTitle[data-selected],
+
+/**
+  The following selectors setting the selected style at the first (not disabled) tab,
+  if the selected state is undetermined at first render (no tab has [data-selected]).
+  This prevents the initial CSS transition, which looks like flickering.
+*/
+
+// first tab disabled
+:global(.flow--tabs--tab-list):not(:has(.tabTitle[data-selected])):has(.tabTitle[aria-disabled])
+.tabTitle[aria-disabled]:first-of-type + .tabTitle,
+
+// other/no tab disabled
+:global(.flow--tabs--tab-list):not(:has(.tabTitle[data-selected]))
+.tabTitle:first-of-type:not([aria-disabled]) {
+  background-color: var(--tab--background-color--selected);
+  color: var(--tab--color--selected);
+  font-weight: var(--tab--font-weight--selected);
 }
